<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2018 Makoto Consulting Group, Inc
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_debug_title"
        android:key="pref_key_debug_settings">
        <CheckBoxPreference
            android:key="pref_key_show_toasts"
            android:title="@string/pref_show_toasts"
            android:summary="@string/pref_show_toasts_summary"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="pref_key_max_notifications"
            android:summary="@string/pref_summary_max_notifications"
            android:title="@string/pref_title_max_notifications"
            android:defaultValue="@string/default_max_notifications"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_mqtt_title"
        android:key="pref_key_mqtt_settings">
        <EditTextPreference
            android:key="pref_key_mqtt_protocol"
            android:summary="@string/pref_summary_mqtt_protocol"
            android:title="@string/pref_title_mqtt_protocol"
            android:defaultValue="@string/default_mqtt_protocol"/>
        <EditTextPreference
            android:key="pref_key_mqtt_host_name"
            android:summary="@string/pref_summary_mqtt_host_name"
            android:title="@string/pref_title_mqtt_host_name"
            android:defaultValue="@string/default_mqtt_host_name"/>
        <EditTextPreference
            android:key="pref_key_mqtt_host_port"
            android:summary="@string/pref_summary_mqtt_host_port"
            android:title="@string/pref_title_mqtt_host_port"
            android:defaultValue="@string/default_mqtt_host_port"/>
    </PreferenceCategory>
</PreferenceScreen>