<!--
  ~    Copyright 2018 Makoto Consulting Group, Inc
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.makotogo.learn.mobile.iot.devicecontroller.HomeFragment"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/org_id"
        android:labelFor="@id/orgIdTextField"
    />
    <EditText
        android:id="@+id/orgIdTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/deviceTypeTextField"
        android:text="@string/device_type"/>
    <EditText
        android:id="@+id/deviceTypeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/deviceIdTextField"
        android:text="@string/device_id"/>
    <EditText
        android:id="@+id/deviceIdTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/apiKeyTextField"
        android:text="@string/api_key"/>
    <EditText
        android:id="@+id/apiKeyTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/authTokenTextField"
        android:text="@string/auth_token"/>
    <EditText
        android:id="@+id/authTokenTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"/>

</LinearLayout>
